# gazebo_ros_additional_pkgs

./: CMakeLists.txt  README.md  package.xml
gazebo_actor_collisions/: CMakeLists.txt  package.xml
gazebo_actor_collisions/src/: ActorCollisionsPlugin.cc
gazebo_actor_collisions/worlds/: actor_collisions.world  white_box.world
gazebo_collision_msgs/: CMakeLists.txt  package.xml
gazebo_collision_msgs/msg/: Collision.msg
gazebo_door/: CMakeLists.txt  README.md  package.xml
gazebo_door/include/gazebo_door/: proximity_door_plugin.hpp
gazebo_door/src/: proximity_door_plugin.cpp
gazebo_door/worlds/: corridor_two_rooms_door.world
gazebo_landmark_msgs/: CMakeLists.txt  package.xml
gazebo_landmark_msgs/msg/: LandmarkMeasure.msg  LandmarkMeasureArray.msg
gazebo_people_detector/: CMakeLists.txt  package.xml
gazebo_people_detector/include/gazebo_people_detector/: gazebo_people_detector.hpp
gazebo_people_detector/src/: gazebo_people_detector.cpp
gazebo_ros_collision/: CMakeLists.txt  package.xml
gazebo_ros_collision/include/gazebo_ros_collision/: gazebo_ros_collision.hpp
gazebo_ros_collision/src/: gazebo_ros_collision.cpp
gazebo_ros_collision/worlds/: gazebo_ros_collision_demo.world
gazebo_ros_landmarks/: CMakeLists.txt  package.xml
gazebo_ros_landmarks/include/gazebo_ros_landmarks/: gazebo_ros_landmarks.hpp
gazebo_ros_landmarks/src/: gazebo_ros_landmarks.cpp
gazebo_ros_landmarks/worlds/: gazebo_ros_landmarks_demo.world
gazebo_ros_pose3d/: CMakeLists.txt  package.xml
gazebo_ros_pose3d/include/gazebo_ros_pose3d/: gazebo_ros_pose3d.hpp
gazebo_ros_pose3d/src/: gazebo_ros_pose3d.cpp
gazebo_ros_pose3d/worlds/: gazebo_ros_pose3d_demo.world
