<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros_landmarks</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andrea.ostuni@polito.it">Andrea Ostuni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>gazebo_landmark_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>